k8s/alumnos-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alumnos-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alumnos
  template:
    metadata:
      labels:
        app: alumnos
    spec:
      containers:
        - name: alumnos
          image: cris626/alumnos:v1
---
apiVersion: v1
kind: Service
metadata:
  name: alumnos-srv
spec:
  selector:
    app: alumnos
  ports:
    - name: alumnos
      protocol: TCP
      port: 4003
      targetPort: 4003
