k8s/instructores-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instructores-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instructores
  template:
    metadata:
      labels:
        app: instructores
    spec:
      containers:
        - name: instructores
          image: cris626/instructores:v1
---
apiVersion: v1
kind: Service
metadata:
  name: instructores-srv
spec:
  selector:
    app: instructores
  ports:
    - name: instructores
      protocol: TCP
      port: 4002
      targetPort: 4002
