k8s/usuarios-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuarios-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usuarios
  template:
    metadata:
      labels:
        app: usuarios
    spec:
      containers:
        - name: usuarios
          image: cite/usuarios:v1
---
apiVersion: v1
kind: Service
metadata:
  name: usuarios-srv
spec:
  selector:
    app: usuarios
  ports:
    - name: usuarios
      protocol: TCP
      port: 4000
      targetPort: 4000
