k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: cite.com
      http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: usuarios-srv
                port:
                  number: 4000
          - path: /api/cursos/?(.*)
            pathType: Prefix
            backend:
              service:
                name: cursos-srv
                port: 
                  number: 4001
          - path: /api/instructores/?(.*)
            pathType: Prefix
            backend:
              service:
                name: instructores-srv
                port: 
                  number: 4002
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: alumnos-srv
                port: 
                  number: 4003
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port: 
                  number: 3000
